# mooving_golem

./: .gitignore  Cargo.toml  readme.md  test_and_build.sh
.github/workflows/: check_and_lint.yaml  cicd.yaml
import/: import.fish  moofing.json
mooving/: Cargo.toml
mooving/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: conversions.rs  lib.rs
wasm/wit/: mooving.wit
