[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "mooving"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[package.metadata.component]
package = "component:mooving"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"

[dependencies]
wit-bindgen = { version = "0.7.0", default_features = false }
once_cell = "1.8.0"
mooving = { path = "../mooving" }

